/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.0/userguide/building_java_projects.html
 */

plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
	// Publishing
	id 'maven-publish'
	// Signing (yay)
	id 'signing'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

version = "alpha-1.0.1"

dependencies {
    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'

    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api 'org.apache.commons:commons-math3:3.6.1'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:31.1-jre'

	implementation 'org.json:json:20230227'
}

tasks.named('jar') {
    manifest {
        attributes('Implementation-Title': project.name,
                   'Implementation-Version': project.version)
    }
}

task sourceJar(type: Jar) {
  from sourceSets.main.allJava
  archiveClassifier = "sources"
}

publishing {
	publications {
		tidepoolSdkJava(MavenPublication) {
			groupId = "org.tidepool.tidepoolsdkjava"
			artifactId = "TidepoolSDKJava"
			from components.java
			artifact sourceJar
			pom {
				name = "Tidepool SDK for Java"
				description = "API to help communicate with the tidepool backend"
				developers {
					developer {
						id = "mango"
						name = "Kyle"
						email = "mangoiscute95@gmail.com"
					}
				}
				organization {
					name = "Tidepool"
					url = "https://tidepool.org"
				}
				scm {
					connection = "git@github.com:cuttestkittensrule/Tidepool-Sdk-for-Java.git"
					developerConnection = "git@github.com:cuttestkittensrule/Tidepool-Sdk-for-Java.git"
					url = "https://github.com/cuttestkittensrule/Tidepool-Sdk-for-Java"
				}
			}
		}
	}

	repositories {
		maven {
			name = "distJar"
			url = layout.buildDirectory.dir("repo")
		}
	}
}

tasks.withType(GenerateModuleMetadata).configureEach {
    // The value 'enforced-platform' is provided in the validation
    // error message you got
    suppressedValidationErrors.add('enforced-platform')
}

tasks.withType(JavaCompile) {
	options.release = 11
}
ext.isReleaseVersion = false
signing {
    useGpgCmd()
    sign publishing.publications.tidepoolSdkJava
}